replay (de)serialization, replay ui